--- a/templates/index.html
+++ b/templates/index.html
@@ -100,6 +100,11 @@
                     </div>
                 </div>
                 <div class="categorycontainer chat-container">
+                    <div class="chat-header">
+                        <button id="exportPdfBtn" class="export-pdf-btn" title="Export report as PDF">
+                            📄 Export Report
+                        </button>
+                    </div>
                     <div id="chatWindow" class="chat-window">
                         <div class="system">Ask questions about places in the database.</div>
                     </div>
